2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	More reformatting and documentation work in store module.

	* libopenvas/store.c: Reformatting, doc.

2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Reformatting and documentation work in store module.

	* libopenvas/store.c: Reformatting, doc.

2009-03-31  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Disabled checking for non-printable chars when posting security
	messages. This allows localizations and support for e.g. german or
	french characters in the messages text.
	It is unclear why this behaviour was wished (in order to prevent NTP
	corruption?).

	* libopenvas/plugutils.c (proto_post_wrapped): Disabled replacement
	of non-printable characters by spaces.
	
2009-03-31  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas/plugutils.c: Reformatting, whitespace-removal, K&R style
	replacements, doc.

2009-03-31  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* Makefile: Phony target doc-dev is actually called doc-full.

2009-03-27  Michael Wiegand <michael.wiegand@intevation.de>

	* libopenvas/Makefile, libopenvas_hg/Makefile: Adjusted libtool calls to
	remove warnings about deprecated libtool usage during compile.

2009-03-06  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* doc/Doxyfile, doc/Doxyfile_full: Set PROJECT_NUMBER to 2.0.3.SVN.

	* VERSION: Set to 2.0.3.SVN.

2009-03-06  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 2.0.2 release.

	* CHANGES: Updated.

	* VERSION: Set to 2.0.2.

2009-03-04  Vlatko Kosturjak <kost@linux.hr>

	* libopenvas/bpf_share.c: by default, put pcap device in non 
	blocking mode - fixing plugins hang/freeze, fixes #901

2009-02-27  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas/openvas_ssh_login.c, libopenvas/openvas_ssh_login.h:
	Updated to version used in client: