@@ -1,5 +1,12 @@
 2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
+	Corrected checks when loading plugins from cache, extended
+	documentation, removed debug printf.
+
+	* libopenvas/store.c (store_load_plugin): Corrected checks and doc.
+
+2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
 	More reformatting and documentation work in store module.
 
 	* libopenvas/store.c: Reformatting, doc.
